feat: Nvidia and ublue from wayblue

--- a/recipes/parts/nvidia.yml
+++ b/recipes/parts/nvidia.yml
@@ -1,19 +1,21 @@
 modules:
   - type: containerfile
     snippets:
-      - ENV AKMODS_BUILD_USER=builder
-  - type: dnf
-    install:
-      packages:
-        - akmod-nvidia
-        - xorg-x11-drv-nvidia
-        - xorg-x11-drv-nvidia-libs
-        - xorg-x11-drv-nvidia-cuda
-        - nvidia-settings
+      - COPY --from=ghcr.io/ublue-os/akmods-nvidia:main-42 /rpms/ /tmp/rpms
+      - RUN find /tmp/rpms
+      - RUN rpm-ostree install /tmp/rpms/ublue-os/ublue-os-nvidia*.rpm
+      - RUN sed -i '0,/enabled=0/{s/enabled=0/enabled=1/}' /etc/yum.repos.d/nvidia-container-toolkit.repo
+      - RUN sed -i '0,/enabled=0/{s/enabled=0/enabled=1\npriority=90/}' /etc/yum.repos.d/negativo17-fedora-nvidia.repo   
+      - RUN rpm-ostree install /tmp/rpms/kmods/kmod-nvidia*.rpm libnvidia-fbc libva-nvidia-driver nvidia-driver nvidia-driver-cuda nvidia-modprobe nvidia-persistenced nvidia-settings nvidia-container-toolkit 
+  - type: script
+    scripts:
+      - installnvidiatoolkitpolicy.sh
+      - removeunusedrepos.sh
+      - setearlyloading.sh
+      - setdrmvariables.sh
   - type: kargs
-    arch: x86_64
     kargs:
       - rd.driver.blacklist=nouveau
       - modprobe.blacklist=nouveau
       - nvidia-drm.modeset=1
-  - type: initramfs
+      - nvidia-drm.fbdev=1
