Do not remove cosmic-term

--- a/recipes/parts/packages.yml
+++ b/recipes/parts/packages.yml
@@ -18,9 +18,9 @@ modules:
         - podman
         - toolbox
         - zed
+        - openconnect
     remove:
       packages:
-        - cosmic-term
         - cosmic-wallpapers
   - type: brew
     nofile-limits: true
