Rework bootc-hooks module

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -22,6 +22,20 @@ modules:
   - from-file: "parts/media.yml"
   - type: bootc-hooks
     source: local
+    user:
+      boot:
+        - user_boot.sh
+      update:
+        - user_update.sh
+      switch:
+        - user_switch.sh
+    system:
+      boot:
+        - system_boot.sh
+      update:
+        - system_update.sh
+      switch:
+        - system_switch.sh
   - type: secure-dns
     provider: cloudflare
     source: local
