--- a/recipes/bos_media_center.yml
+++ b/recipes/bos_media_center.yml
@@ -1,12 +1,12 @@
 ---
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
 # image will be published to ghcr.io/<user>/<name>
-name: bos
+name: bosm
 # description will be included in the image's metadata
-description: This is my personal OS image.
+description: This is my personal OS image for home lab/media center.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: quay.io/fedora-ostree-desktops/cosmic-atomic
+base-image: quay.io/fedora-ostree-desktops/base-atomic
 image-version: 43 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
@@ -18,8 +18,11 @@ modules:
         destination: /
   - from-file: "parts/ublue.yml"
   - from-file: "parts/packages.yml"
-  - from-file: "parts/nvidia.yml"
   - from-file: "parts/media.yml"
+  - type: dnf
+    install:
+      packages:
+        - quadlet
   - type: bootc-hooks
     source: local
     user:
@@ -33,40 +36,22 @@ modules:
       - name: flathub
         url: https://dl.flathub.org/repo/flathub.flatpakrepo
         apps:
-          - com.github.IsmaelMartinez.teams_for_linux
           - com.spotify.Client
-          - io.beekeeperstudio.Studio
-          - io.github.betaflight.BetaflightConfigurator
-          - dev.edfloreshz.CosmicTweaks
-      - name: cosmic
-        url: "https://apt.pop-os.org/cosmic/cosmic.flatpakrepo"
-        apps:
     brew:
       formulae:
         - fzf
         - starship
         - helix
-        - neovim
         - bat
         - ripgrep
         - fd
         - eza
         - zoxide
         - tldr
-        - fnm
         - direnv
         - zellij
-  - type: secure-dns
-    provider: cloudflare
-    source: local
-  - type: fonts
-    fonts:
-      nerd-fonts:
-        - FiraCode
-      google-fonts:
-        - Fira Sans
   - type: script
     scripts:
-      - removeunusedrepos.sh
-      - regenerateinitramfs.sh
-  - type: signing
+      - "setup_steam_kiosk.sh"
+  - from-file: "parts/final.yml"
+  # Qadlet with seafile, jellyfin, tailscale, vaultwarden, zitadel
