--- a/recipes/bos_workstation.yml
+++ b/recipes/bos_workstation.yml
@@ -33,21 +33,24 @@ modules:
         - yadm_pull.sh
   - type: first-time-setup
     source: local
-    shell: zsh
-    dotfiles_repo: git@github.com:chuckborris33/dotfiles.git
-    flatpak_remotes:
-      - name: flathub
-        url: https://dl.flathub.org/repo/flathub.flatpakrepo
-        apps:
-          - com.github.IsmaelMartinez.teams_for_linux
-          - com.spotify.Client
-          - io.beekeeperstudio.Studio
-          - io.github.betaflight.BetaflightConfigurator
-          - dev.edfloreshz.CosmicTweaks
-      - name: cosmic
-        url: "https://apt.pop-os.org/cosmic/cosmic.flatpakrepo"
-        apps:
-    brew:
+    set_default_shell:
+      shell: zsh
+    clone_dotfiles:
+      repo: git@github.com:chuckborris33/dotfiles.git
+    install_flatpaks:
+      remotes:
+        - name: flathub
+          url: https://dl.flathub.org/repo/flathub.flatpakrepo
+          apps:
+            - com.github.IsmaelMartinez.teams_for_linux
+            - com.spotify.Client
+            - io.beekeeperstudio.Studio
+            - io.github.betaflight.BetaflightConfigurator
+            - dev.edfloreshz.CosmicTweaks
+        - name: cosmic
+          url: "https://apt.pop-os.org/cosmic/cosmic.flatpakrepo"
+          apps: []
+    install_brew_packages:
       formulae:
         - fzf
         - starship
@@ -63,6 +66,10 @@ modules:
         - uv
         - direnv
         - zellij
+    configure_git_identity: true
+    copy_cosmic_config: true
+    setup_ssh_and_github: true
+    setup_tailscale: true
   - type: script
     snippets:
       - authselect select local with-silent-lastlog with-fingerprint
