Fix first time setup

--- a/recipes/bos_media_center.yml
+++ b/recipes/bos_media_center.yml
@@ -55,4 +55,4 @@ modules:
     scripts:
       - "setup_steam_kiosk.sh"
   - from-file: "parts/final.yml"
-  # Qadlet with seafile, jellyfin, tailscale, vaultwarden
+  # Qadlet with seafile, filestash, jellyfin, tailscale, vaultwarden
