Rework services templating

--- a/recipes/bos_media_center.yml
+++ b/recipes/bos_media_center.yml
@@ -55,11 +55,11 @@ modules:
     configure_git_identity: true
     setup_ssh_and_github: true
     setup_tailscale: true
-    setup_steam_kiosk: true
+    #setup_steam_kiosk: true
     setup_media_services: true
   - type: script
     scripts:
       - "install_steam.sh"
   - from-file: "parts/final.yml"
   # Qadlet with filebrowser, jellyfin, tailscale, dnsmasq
-  # Later seefile, vaultwarden
+  # Later seefile, vaultwarden, radarr, sonarr, lidarr
