--- a/recipes/parts/common_packages.yml
+++ b/recipes/parts/common_packages.yml
@@ -11,6 +11,7 @@ modules:
         - zsh
         - yadm
         - alacritty
+        - gum
         # Devel
         - distrobox
         - podman
