Move to base-atomic

--- a/recipes/parts/workstation.yml
+++ b/recipes/parts/workstation.yml
@@ -12,6 +12,7 @@ modules:
       packages:
         - zed
         - openconnect
+        - alacritty
   - type: justfiles
     include:
       - apps.just
