--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: bluebuild
 on:
   schedule:
     - cron:
-        "00 06 * * *" # build at 06:00 UTC every day
+        "00 06 */3 * *" # build at 06:00 UTC every 3rd day
         # (20 minutes after last ublue images start building)
   push:
     paths-ignore: # don't rebuild if only documentation has changed
@@ -41,42 +41,3 @@ jobs:
 
           # enabled by default, disable if your image is small and you want faster builds
           maximize_build_space: true
-  # build_iso:
-  #   name: Build ISO from Custom Image
-  #   runs-on: ubuntu-latest
-  #   needs: bluebuild
-  #   permissions:
-  #     contents: read
-  #     packages: write
-  #     id-token: write
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       image:
-  #         - bos
-  #   steps:
-  #     - name: Build ISO
-  #       uses: jasonn3/build-container-installer@main
-  #       id: build
-  #       env:
-  #         IMAGE_NAME: ${{ matrix.image }}
-  #       with:
-  #         arch: x86_64
-  #         image_name: ${{ env.IMAGE_NAME}}
-  #         image_repo: ghcr.io/chuckborris33
-  #         image_tag: latest
-  #         version: 43
-  #         variant: "Kinoite"
-
-  #     # This example is for uploading your ISO as a Github artifact. You can do something similar using any cloud storage, so long as you copy the output
-  #     - name: Upload ISO as artifact
-  #       id: upload
-  #       uses: actions/upload-artifact@v5
-  #       with:
-  #         name: ${{ steps.build.outputs.iso_name }}
-  #         path: |
-  #           ${{ steps.build.outputs.iso_path }}/${{ steps.build.outputs.iso_name }}
-  #           ${{ steps.build.outputs.iso_path }}/${{ steps.build.outputs.iso_name }}-CHECKSUM
-  #         if-no-files-found: error
-  #         retention-days: 0
-  #         compression-level: 0
