Switch media server kiosk setup from Steam to Pegasus
Update setup scripts and configs to use Pegasus frontend instead of
Steam.
Install Pegasus via Flatpak and configure XboxOS theme. Simplify Steam
install
script and adjust user profile to launch Pegasus.

--- a/recipes/parts/media_server.yml
+++ b/recipes/parts/media_server.yml
@@ -28,9 +28,9 @@ modules:
     configurations:
       - scope: user
         repo:
-          # you can override the title to make inclusion of both system and user repos clearer
           title: Flathub (user)
-        install: []
+        install:
+          - org.pegasus_frontend.Pegasus
   - type: script
     scripts:
       - "install_steam.sh"
