--- a/recipes/parts/media_server.yml
+++ b/recipes/parts/media_server.yml
@@ -26,7 +26,10 @@ modules:
         - https://github.com/terrapkg/subatomic-repos/raw/main/terra.repo
     install:
       packages:
+        - evtest
+        - joystick
         - es-de
+        - retroarch
   - type: brewfiles
     source: local
     include:
