feat: hide cursor in ES-DE, gamescope, retroarch and Steam games
Add seat configuration to hide cursor globally after 1ms of inactivity.
Add per-window rules for es-de, gamescope, retroarch, and steam
to ensure cursor is hidden in all gaming applications.

--- a/recipes/parts/media_server.yml
+++ b/recipes/parts/media_server.yml
@@ -24,12 +24,15 @@ modules:
       cleanup: true
       files:
         - https://github.com/terrapkg/subatomic-repos/raw/main/terra.repo
+      copr:
+        - yohane-shiro
     install:
       packages:
         - evtest
         - joystick
         - es-de
         - retroarch
+        - joystickwake
   - type: brewfiles
     source: local
     include:
